# bloom

./: .gitignore  CLAUDE.md  SPEC.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 85842d2e9538_create_users_table.py  9c8d491c9ddf_create_daily_log_tables.py
backend/server/: database.py  main.py
backend/server/crud/: logs.py  user.py
backend/server/models/: __init__.py  daily_log.py  user.py
backend/server/routers/: __init__.py  auth.py  logs.py
backend/server/schemas/: daily_logs.py  user.py
backend/server/service/: logs.py  user.py
backend/server/utils/: auth.py  dependencies.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: InputField.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/types/: index.ts
